README added and warnings cleaned